// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test with alt 1`] = `
<img
  alt="150x150 placeholder"
  className="Pinpoint Image  "
  decoding="async"
  loading="lazy"
  src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
/>
`;

exports[`Test with blurhash 1`] = `
<img
  alt="blurhash"
  className="Pinpoint Image  "
  decoding="async"
  height={860}
  loading="lazy"
  src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
  width={1328}
/>
`;

exports[`Test with className 1`] = `
<img
  alt="150x150 placeholder"
  className="Pinpoint Image placeholder "
  decoding="async"
  loading="lazy"
  src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
/>
`;

exports[`Test with no source 1`] = `null`;

exports[`Test with no width or height 1`] = `
<img
  alt=""
  className="Pinpoint Image  "
  decoding="async"
  loading="lazy"
  src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
/>
`;

exports[`Test with width and height 1`] = `
<img
  alt=""
  className="Pinpoint Image  "
  decoding="async"
  height={150}
  loading="lazy"
  src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
  width={150}
/>
`;
